# pylottie-convert

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
src/: bindings.cpp  lottie_engine.cpp  lottie_engine.h
src/pylottie_convert/: animation.py  animation.pyi
